--- a/style.css
+++ b/style.css
@@ -8,20 +8,36 @@ a, a:visited {
     background-color:#000;
     padding:1em;
     font-size:1.5em;
+    color:#fff;
+    overflow:hidden;
 } 
 
 .character-title {
     width:auto;
     background-color:#000; 
     padding:0.8em;
-    font-size:2.5em;
+    font-size:2em;
+    color:#fff;
+    overflow:hidden;
 }
 
 .location-title-input{
     font-weight:bold;
     background-color:#000;
     border:none;
+    width:auto;
     font-size:inherit;
+    display:inline;
+    color:#fff;
+}
+
+.character-title-input{
+    font-weight:bold;
+    background-color:#000;
+    width:33%;
+    border:none;
+    font-size:inherit;
+    display:inline;
     color:#fff;
 }
 
@@ -94,7 +110,7 @@ hr{
 .info-body{width:auto;border: #000 2px solid; border-color:#000; padding:0.5em; margin:0.5em;background-color:#eee;}
 .info-box{width:auto;border: #999 1px solid; padding:0.5em; margin:0.5em;}
 h2 {color:#000;font-size:2.5em;text-decoration:0.1em underline}
-h1 {color:#FFF;font-size:inherit;}
+h1 {color:#FFF;font-size:inherit;display:inline;}
 tr:nth-child(even) {background-color: #000; color:#fff;}
 tr:nth-child(odd) {background-color: #fff; color:#000;}
 
