--- a/style.css
+++ b/style.css
@@ -1,7 +1,31 @@
+* {
+    width:auto;
+    padding:0px;
+    margin:0px;
+    font-family:monospace;
+}
+
+tr:nth-child(even) {
+    background-color: #000;
+    color:#fff;
+    
+}
+tr:nth-child(odd) {
+    background-color: #fff;
+    color:#000;
+    
+}
+
+table{width: calc(100% - 1em); margin:0.5em;}
+td {padding:0.3em; font-size:1.5em;width:50%;}
+button{padding:0.5em;  font-weight:bold; width:100%; border-radius:1em; color:#fff; background-color:#000; border:2px black;}
+
+
 a, a:visited {
     color:inherit;
     text-decoration:none;
 }
+
 
 .location-title {
     width:auto;
@@ -39,6 +63,22 @@ a, a:visited {
     font-size:inherit;
     display:inline;
     color:#fff;
+}
+
+.character-title-input-svelte{
+    font-weight:bold;
+    background-color:#000;
+    width:10%;
+    text-align:center;
+    border:none;
+    font-size:inherit;
+    display:inline;
+    color:#fff;
+}
+
+.searchbar {
+    margin: 0.5em;
+    width: calc(100% - 1em);
 }
 
 .hidden-input{
@@ -106,15 +146,70 @@ hr{
     background-color:#00f;
 }
 
+.timeline-table{
+    margin:0px;
+    padding:0px;
+    background-color:#fff;
+    width:100%;
+    table-layout:fixed;
+    
+}
+
+tr.timeline-row {
+    background-color:#fff;
+    padding:1em;
+    color:#000;
+}
+
+
+
+.timeline-header{
+    background-color:#000;
+    color:#fff;
+    text-emphasis:bold;
+    font-size:2em;
+    padding:0.5em;
+    text-align:center;
+    width:calc(100%  - 1em);
+    
+}
+
+
+.timeline-event {
+    background-color:#999;
+    text-align:center;
+    overflow-wrap:break-word;
+    padding:5px;
+    vertical-align:top;
+   width:33%;
+    margin:1em;
+    color:#000;
+}
+
+.timeline-event-name {
+    background-color:#000;
+    color:#fff;
+    padding:0px;
+    font-size:1.3em;
+    margin:0px;
+}
+
+.timeline-event-date {
+    background-color:#555;
+    font-size:0.8em;
+    border-bottom-left-radius:0.8em;
+    border-bottom-right-radius:0.8em;
+    color:#fff;
+    padding:0px;
+    margin:0px;
+}
+
+
+
 
 .info-body{width:auto;border: #000 2px solid; border-color:#000; padding:0.5em; margin:0.5em;background-color:#eee;}
 .info-box{width:auto;border: #999 1px solid; padding:0.5em; margin:0.5em;}
 h2 {color:#000;font-size:2.5em;text-decoration:0.1em underline}
 h1 {color:#FFF;font-size:inherit;display:inline;}
-tr:nth-child(even) {background-color: #000; color:#fff;}
-tr:nth-child(odd) {background-color: #fff; color:#000;}
 
-table{width: calc(100% - 1em); margin:0.5em;}
-td {padding:0.3em; font-size:1.5em;width:50%;}
-button{padding:0.5em;  font-weight:bold; width:100%; border-radius:1em; color:#fff; background-color:#000; border:2px black;}
-* {width:auto;padding:0px; margin:0px;font-family:monospace;}
+
